@@ -42,7 +42,7 @@
         </vue-splitter>
         <lms-now-playing :desktop="true"></lms-now-playing>
         <lms-noplayer></lms-noplayer>
-        <lms-ui-settings></lms-ui-settings>
+        <lms-ui-settings :desktop="true"></lms-ui-settings>
         <lms-player-settings></lms-player-settings>
         <lms-information-dialog></lms-information-dialog>
         <lms-sync-dialog></lms-sync-dialog>
