@@ -18,6 +18,7 @@
 "Append random album to queue":"",
 "Append to queue":"",
 "Appended '%1' to the play queue":"",
+"Application layout":"",
 "Apps":"",
 "Artist Biography":"",
 "Artist Mix":"",
@@ -26,6 +27,7 @@
 "Artists":"",
 "Audio":"",
 "Auto-scroll to current track":"",
+"Automatic":"",
 "Browse":"",
 "Cancel":"",
 "Cancel Sleep":"",
@@ -117,6 +119,7 @@
 "Radio":"",
 "Random Albums":"",
 "Random Mix":"",
+"Reload":"",
 "Remove":"",
 "Remove '%1' from favorites?":"",
 "Remove all tracks from queue?":"",
@@ -165,6 +168,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Start":"",
 "Start time":"",
+"Stay As Is":"",
 "Stop":"",
 "Sun":"",
 "Sunday":"",
@@ -191,6 +195,8 @@
 "Update rescan":"",
 "Use categories as supplied by server":"",
 "Use dark theme":"",
+"Use desktop layout":"",
+"Use mobile layout":"",
 "Useful when browsing a large list of artists, or albums.":"",
 "Volume (%)":"",
 "Wednesday":"",
@@ -199,6 +205,7 @@
 "Year, Album":"",
 "Year, Artist, Album":"",
 "Years":"",
+"You have changed the application layout setting. Do you wish to re-load the page, so that this can take effect?":"",
 "1 Album":"",
 "%1 Albums":"",
 "1 App":"",
