@@ -18,6 +18,7 @@
 "Append random album to queue":"Zufälliges Album anfügen",
 "Append to queue":"An Warteschlange anfügen",
 "Appended '%1' to the play queue":"'%1' wurde an Warteschlange angefügt",
+"Application layout":"",
 "Apps":"Anwendungen",
 "Artist Biography":"Biographie",
 "Artist Mix":"Interpreten Mix",
@@ -26,6 +27,7 @@
 "Artists":"Interpreten",
 "Audio":"",
 "Auto-scroll to current track":"Automatisch zu aktuellem Titel springen",
+"Automatic":"",
 "Browse":"Durchsuchen",
 "Cancel":"Abbrechen",
 "Cancel Sleep":"Schlummermodus abbrechen",
@@ -117,6 +119,7 @@
 "Radio":"",
 "Random Albums":"Zufällig Alben",
 "Random Mix":"Zufällige Wiedergabe",
+"Reload":"",
 "Remove":"Entfernen",
 "Remove '%1' from favorites?":"Entferne '%1' aus den Favoriten?",
 "Remove all tracks from queue?":"Aktuelle Wiedergabeliste leeren?",
@@ -165,6 +168,7 @@
 "Split artist (and album) lists into A..Z":"Interpreten und Alben in Listen A...Z unterteilen",
 "Start":"",
 "Start time":"Startzeit",
+"Stay As Is":"",
 "Stop":"Stopp",
 "Sun":"Son",
 "Sunday":"Sonntag",
@@ -191,6 +195,8 @@
 "Update rescan":"Aktualiseren",
 "Use categories as supplied by server":"Kategorien vom Server verwenden",
 "Use dark theme":"Dunkles Farbschema verwenden",
+"Use desktop layout":"",
+"Use mobile layout":"",
 "Useful when browsing a large list of artists, or albums.":"Hilfreich bei langen Listen von Interpreten oder Alben.",
 "Volume (%)":"Lautstärke",
 "Wednesday":"Mittwoch",
@@ -199,6 +205,7 @@
 "Year, Album":"Jahr, Album",
 "Year, Artist, Album":"Jahr, Interpret, Album",
 "Years":"Jahre",
+"You have changed the application layout setting. Do you wish to re-load the page, so that this can take effect?":"",
 "1 Album":"Ein Album",
 "%1 Albums":"%1 Alben",
 "1 App":"Eine Anwendung",
