@@ -18,6 +18,7 @@
 "Append random album to queue":"Ajouter un album aléatoire à la liste de lecture en cours",
 "Append to queue":"Ajouter à la liste de lecture en cours",
 "Appended '%1' to the play queue":"'%1' ajouté à la liste de lecture en cours",
+"Application layout":"",
 "Apps":"Applications",
 "Artist Biography":"Biographie d'interprète",
 "Artist Mix":"",
@@ -26,6 +27,7 @@
 "Artists":"Interprètes",
 "Audio":"",
 "Auto-scroll to current track":"Aller automatiquement à la chanson actuelle",
+"Automatic":"",
 "Browse":"Feuilleter",
 "Cancel":"Annuler",
 "Cancel Sleep":"",
@@ -117,6 +119,7 @@
 "Radio":"",
 "Random Albums":"",
 "Random Mix":"Mix aléatoire",
+"Reload":"",
 "Remove":"Enlever",
 "Remove '%1' from favorites?":"Enlever '%1' des favoris?",
 "Remove all tracks from queue?":"Enlever tous les morceaux de la liste de lecture actuelle?",
@@ -165,6 +168,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Start":"",
 "Start time":"Temps de démarrage",
+"Stay As Is":"",
 "Stop":"",
 "Sun":"Di",
 "Sunday":"Dimanche",
@@ -191,6 +195,8 @@
 "Update rescan":"",
 "Use categories as supplied by server":"",
 "Use dark theme":"",
+"Use desktop layout":"",
+"Use mobile layout":"",
 "Useful when browsing a large list of artists, or albums.":"",
 "Volume (%)":"",
 "Wednesday":"Mercredi",
@@ -199,6 +205,7 @@
 "Year, Album":"Année, Album",
 "Year, Artist, Album":"Année, Interprète, Album",
 "Years":"Années",
+"You have changed the application layout setting. Do you wish to re-load the page, so that this can take effect?":"",
 "1 Album":"Un Album",
 "%1 Albums":"",
 "1 App":"1 Application",
