@@ -18,6 +18,7 @@
 "Append random album to queue":"Voeg een willekeurig album toe aan de afspeellijst",
 "Append to queue":"Voeg toe aan afspeellijst",
 "Appended '%1' to the play queue":"'%1' toegevoegd aan afspeellijst",
+"Application layout":"",
 "Apps":"Toepassingen",
 "Artist Biography":"Artiest biografie",
 "Artist Mix":"",
@@ -26,6 +27,7 @@
 "Artists":"Artiesten",
 "Audio":"",
 "Auto-scroll to current track":"Automatisch naar het huidige nummer gaan",
+"Automatic":"",
 "Browse":"Bladeren",
 "Cancel":"Annuleren",
 "Cancel Sleep":"",
@@ -117,6 +119,7 @@
 "Radio":"",
 "Random Albums":"",
 "Random Mix":"Willekeurige Mix",
+"Reload":"",
 "Remove":"Verwijder",
 "Remove '%1' from favorites?":"'%1' uit favorieten verwijderen?",
 "Remove all tracks from queue?":"Alle tracks uit de afspeellijst verwijderen?",
@@ -165,6 +168,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Start":"",
 "Start time":"Starttijd",
+"Stay As Is":"",
 "Stop":"",
 "Sun":"Zo",
 "Sunday":"Zondag",
@@ -191,6 +195,8 @@
 "Update rescan":"",
 "Use categories as supplied by server":"",
 "Use dark theme":"",
+"Use desktop layout":"",
+"Use mobile layout":"",
 "Useful when browsing a large list of artists, or albums.":"",
 "Volume (%)":"",
 "Wednesday":"Woensdag",
@@ -199,6 +205,7 @@
 "Year, Album":"Jaar, Album",
 "Year, Artist, Album":"Jaar, Artiest, Album",
 "Years":"Jaren",
+"You have changed the application layout setting. Do you wish to re-load the page, so that this can take effect?":"",
 "1 Album":"Één Album",
 "%1 Albums":"",
 "1 App":"1 Toepassing",
