@@ -4,6 +4,7 @@
 2. Add 'Play album starting at track' item to track context menus. Only if
    parent is an album, and track is not 1st track.
 3. Respect genre/artist filtering when adding albums/artists to queue.
+4. Add a setting to specify application layout; auto, desktop, mobile.
 
 0.1.0
 -----
